# cam

./: .gitignore  .gitmodules  AGENTS.md  CAM-IMPROVEMENT-SUGGESTIONS.md  CLAUDE.md  CM-vs-CAM-COMPARISON.md  CONFIG-CHANGES.md  FN211_resources.md  IMPLEMENTATION-SUMMARY.md  README.md  build_camc.py  calc.py  claude_auto.exp  claude_wrapper.exp  coding-agent-wrapper-README.md  coding-agent-wrapper-design.md  coding-manager-spec.md  coding_agent_api.py  coding_agent_final.py  coding_agent_simple.py  coding_agent_wrapper.py  debug_claude_interaction.py  demo_agent.py  feynman-211-analysis.md  greet.py  hello-tmux.txt  hello_isolated.py  pyproject.toml  quick-test.txt  test.txt  test_agent_wrapper.py  test_ansi_parsing.py  test_claude_print_mode.py  test_complex_usecase.py  test_pexpect_claude.py  verbose_debug.py
cam/: pyproject.toml
cam/cam-agent/cmd/cam-agent/: main.go
cam/cam-agent/internal/fileops/: fileops.go
cam/cam-agent/internal/screen/: screen.go
cam/relay/: relay.py
cam/scripts/: fake-claude.toml  fake_coding_cli.py
cam/src/cam/: camc.py
cam/src/cam/adapters/: base.py  (+3 more)
cam/tests/: conftest.py  test_adapters.py  test_agent_transport.py  test_api.py  test_client_transport.py  test_configurable_adapter.py  test_monitor_probe.py  test_prune.py  test_relay.py  test_scheduler.py  test_ssh_transport.py  test_stores.py  test_utils.py
cam/web/: index.html  plan.md  sw.js
cam/web/assets/: cam.apk
cam/web/css/: style.css
cam/web/js/: api.js  app.js  state.js
skillm/: README.md  pyproject.toml
skillm/src/skillm/: __init__.py  cli.py  core.py
(+460 files in other folders)
