[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cam"
version = "0.1.0"
description = "Coding Agent Manager — PM2 for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
yaml = [
    "pyyaml>=6.0",
]
remote = [
    "websockets>=12.0",
]
server = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
all = [
    "pyyaml>=6.0",
    "websockets>=12.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
cam = "cam.cli.app:main"
cam-server = "cam.api.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cam"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
