[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillm"
version = "0.1.0"
description = "Per-project AI Agent Skill Manager"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
skillm = "skillm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillm"]

[tool.hatch.build.targets.sdist]
include = ["src/skillm"]
